--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.13.3",
     "express-session": "^1.13.0",
     "passport": "^0.3.2",
-    "passport-twitter": "^1.0.3"
+    "passport-twitter": "^1.0.3",
+    "twit": "^2.1.1"
   }
 }
